# vila

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: multiple_pagination.rs  pagination.rs  progress.rs
src/: client.rs  error.rs  lib.rs  pagination.rs  request.rs  retry.rs
tests/integration/: data.rs  empty_response.rs  errors.rs  main.rs  multiple_queries.rs  pagination.rs  post.rs
tests/integration/authorization/: basic.rs  bearer.rs  header.rs  mod.rs  query.rs
tests/integration/pagination/: initial_page.rs  mod.rs  path.rs  query.rs
tests/integration/utils/: matchers.rs  mod.rs
