[package]
name = "vila"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[[example]]
name = "pagination"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
stream-flatten-iters = "0.2"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
wiremock = "0.5"
