[package]
name = "vila"
version = "1.0.1"
authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/SebRollen/vila"
description = "Toolkit for creating strongly-typed REST API clients"
keywords = ["rest", "client", "api"]
categories = ["web-programming", "web-programming::http-client"]

[dependencies]
futures = "0.3"
log = "0.4.14"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[[example]]
name = "pagination"

[dev-dependencies]
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
stream-flatten-iters = "0.2"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
wiremock = "0.5"
